--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto = none
-#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
