--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
     initialization-mode: always
   jpa:
     hibernate:
- #     ddl-auto: create
-      ddl-auto: none
+      ddl-auto: create
+ #     ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
