--- a/api/pom.xml
+++ b/api/pom.xml
@@ -82,7 +82,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>springboot.Application</mainClass>
+					<mainClass>spring.Application</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
