--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -44,11 +44,11 @@ spring.datasource.initialization-mode=always
 
 
 webapp.name=news-web-app
-webapp.drive.service-account=drive-1467@news-web-8697.iam.gserviceaccount.com
-webapp.drive.credentials=drive-credentials.json
-webapp.drive.folder-id=1PvOlGlEqaaS5O1Q8NKqBTCbwSebEhnY2
-webapp.credentials.location=credentials
-webapp.bucket.name=news-web-8697.appspot.com
+webapp.uploadfolder=images
 webapp.pagesize=5
 webapp.messages.loginfail=Invalid username or password
 webapp.messages.logout=You have been logged out successfully
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
