--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -30,15 +30,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
 
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.initialization-mode=always
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.defer-datasource-initialization=true
+#spring.datasource.initialization-mode=always
 
 
 
