--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -20,7 +20,7 @@
 
 
 
-server.port=80
+server.port=8082
 
 spring.datasource.username=root
 spring.datasource.password=password
@@ -38,6 +38,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.defer-datasource-initialization=true
 #spring.datasource.initialization-mode=always
+spring.jpa.open-in-view=false
 
 
 
